mostly completed site

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-auto gy-4">
+                    <div class="col-lg-8 gy-4">
                         <div class="page-paragraph">
                             <h2>Why do we need to eat sustainably?</h2>
                             <p>
@@ -33,6 +33,7 @@
 
                                 Our friends Jordy, Clive, Brianna, and Alexis will also be learning about the impact of their diets as you do. Do you make similar food choices to them? Is there something you can learn from them? Let's find out!</p>
                         </div>
+                        <img src="sample_images/main.jpg" class="img-fluid" alt="...">
                     </div>
                 </div>
                 <div class="row justify-content-center">
