--- a/module3.html
+++ b/module3.html
@@ -35,7 +35,7 @@
                             <div class="row">
                                 <div class="col-6">
                                     <img src="sample_images/module3img1.png" class="img-fluid" alt="...">
-                                    <span class="annotation">Image of hands holding several Wijuti Grubs (19)</span>
+                                    <span class="annotation">Image of hands holding several Wijuti Grubs <a href="references.html">(19)</a></span>
                                 </div>
                                 <div class="col-6">
                                     <img src="sample_images/module3img2.jpg" class="img-fluid" alt="...">
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="page-paragraph">
-                            <p>In 2018, the global edible insect market value was estimated to be 406 million USD, and by 2023 it is predicted to increase massively to over 1.18 billion as we continue to learn about how insects are a nutritious and sustainable food product, making edible insects the fastest growing alternative protein market worldwide. Edible insects also continue to be presented as a possible solution to environmental issues like climate change and food insecurity that are ultimately caused by agriculture and other human activities (11, 20-23).</p>
+                            <p>In 2018, the global edible insect market value was estimated to be 406 million USD, and by 2023 it is predicted to increase massively to over 1.18 billion as we continue to learn about how insects are a nutritious and sustainable food product, making edible insects the fastest growing alternative protein market worldwide. Edible insects also continue to be presented as a possible solution to environmental issues like climate change and food insecurity that are ultimately caused by agriculture and other human activities <a href="references.html">(11, 20-23)</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="col-lg-8 gy-4">
                         <div class="page-paragraph-alt">
                             <h2>Types of Edible Insects</h2>
-                            <p>There is a wide range of insects that you can try, with more than 1900 insects reported as being used as human food (11). The main types of insects that are eaten globally include beetles, ants, bees and wasps, crickets and grasshoppers, moths, butterflies, and termites (23). Edible insects are available in a range of food forms, meaning they don't have to be eaten whole in order to reap the benefits. Types of edible insect products available globally include protein bars, breads, crackers, pastas, beers, milks, chocolates, butters, oils, and much more (23)</p>
+                            <p>There is a wide range of insects that you can try, with more than 1900 insects reported as being used as human food <a href="references.html">(11)</a>. The main types of insects that are eaten globally include beetles, ants, bees and wasps, crickets and grasshoppers, moths, butterflies, and termites <a href="references.html">(23)</a>. Edible insects are available in a range of food forms, meaning they don't have to be eaten whole in order to reap the benefits. Types of edible insect products available globally include protein bars, breads, crackers, pastas, beers, milks, chocolates, butters, oils, and much more <a href="references.html">(23)</a></p>
                         </div>
                         <div class="page-paragraph-alt">
                             <div class="row">
@@ -85,14 +85,14 @@
                     <div class="col-lg-8 gy-4">
                         <div class="page-paragraph">
                             <h2>Sustainability</h2>
-                            <p>Although industrialised insect production is a new area, studies have shown that insect production can have far less of an environmental impact than chicken farms, with impact continuing to decrease as the farms are industrialised further (22). In a similar case, chickens require three times the amount of land and generate 50% more greenhouse gases when compared to mealworms, while beef requires almost 10 times the amount of land and emits 18 times more greenhouse gases (23).</p>
+                            <p>Although industrialised insect production is a new area, studies have shown that insect production can have far less of an environmental impact than chicken farms, with impact continuing to decrease as the farms are industrialised further <a href="references.html">(22)</a>. In a similar case, chickens require three times the amount of land and generate 50% more greenhouse gases when compared to mealworms, while beef requires almost 10 times the amount of land and emits 18 times more greenhouse gases <a href="references.html">(23)</a>.</p>
                         </div>
                         <div class="page-paragraph">
                             <img src="sample_images/module3img7.png" class="img-fluid" style="width:100%" alt="...">
-                            <span class="annotation">Figure 3. Comparison of the amount of land used and greenhouse gas' produced to farm mealworms, chicken, and beef for human consumption (23).</span>
+                            <span class="annotation">Figure 3. Comparison of the amount of land used and greenhouse gas' produced to farm mealworms, chicken, and beef for human consumption <a href="references.html">(23)</a>.</span>
                         </div>
                         <div class="page-paragraph">
-                            <p>Compared to livestock production, many insects have a high feed-conversion efficiency, they can also be reared on organic waste, they emit fewer greenhouse gases, and take a small fraction of the feed, water and space required by traditional livestock (22). For example, grasshoppers, crickets, flies, and beetles can consume a lot of the waste produced from farming or plants such as grasses and silage that humans and traditional livestock cannot consume. By eating materials that we aren't able to eat ourselves, insects don't compete with the human food supply! This also means that they don't require feed like pigs and chickens do, who are mainly fed with grains that require land and water to be grown (11).</p>
+                            <p>Compared to livestock production, many insects have a high feed-conversion efficiency, they can also be reared on organic waste, they emit fewer greenhouse gases, and take a small fraction of the feed, water and space required by traditional livestock <a href="references.html">(22)</a>. For example, grasshoppers, crickets, flies, and beetles can consume a lot of the waste produced from farming or plants such as grasses and silage that humans and traditional livestock cannot consume. By eating materials that we aren't able to eat ourselves, insects don't compete with the human food supply! This also means that they don't require feed like pigs and chickens do, who are mainly fed with grains that require land and water to be grown <a href="references.html">(11)</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -100,12 +100,12 @@
                     <div class="col-lg-8 gy-4">
                         <div class="page-paragraph-alt">
                             <h2>Nutritional Benefits</h2>
-                            <p>Many edible insects are just as nutritious as animal-based foods, this offers a potential solution to fixing our global food and nutrition insecurity! Though macro and micronutrients vary greatly by insect, some species contain as much protein as beef, some contain more iron than spinach, and others offer as much vitamin B12 as salmon (22).</p>
-                            <p>The protein content of edible insects (on a dry matter basis) can range from 35.3% for termites to 61.3% for crickets, grasshoppers, and locusts. Grasshoppers, crickets, and locusts are found to be rich in proteins and represent a valuable alternative protein source, with protein contents up to 77% reported for several grasshopper species! When comparing edible insects to plant protein sources like soybeans (that have a protein content of 35.8%), you can see how great the potential of insects is! (20).</p>
+                            <p>Many edible insects are just as nutritious as animal-based foods, this offers a potential solution to fixing our global food and nutrition insecurity! Though macro and micronutrients vary greatly by insect, some species contain as much protein as beef, some contain more iron than spinach, and others offer as much vitamin B12 as salmon <a href="references.html">(22)</a>.</p>
+                            <p>The protein content of edible insects (on a dry matter basis) can range from 35.3% for termites to 61.3% for crickets, grasshoppers, and locusts. Grasshoppers, crickets, and locusts are found to be rich in proteins and represent a valuable alternative protein source, with protein contents up to 77% reported for several grasshopper species! When comparing edible insects to plant protein sources like soybeans (that have a protein content of 35.8%), you can see how great the potential of insects is! <a href="references.html">(20)</a>.</p>
                         </div>
                         <div class="page-paragraph-alt">
                             <img src="sample_images/module3img8.png" class="img-fluid" style="width:100%" alt="...">
-                            <span class="annotation">Table 1. Nutritional profile of insects(20). The average nutrient composition of insects, on a dry matter basis, including their energy contents.</span>
+                            <span class="annotation">Table 1. Nutritional profile of insects<a href="references.html">(20)</a>. The average nutrient composition of insects, on a dry matter basis, including their energy contents.</span>
                         </div>
                     </div>
                 </div>
