--- a/sidebar.html
+++ b/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar-button">
     <div class="row">
         <div class="col-auto">
-        <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <a data-bs-toggle="offcanvas" href="#offcanvasExample" class="primary" role="button" aria-controls="offcanvasExample">
             <i class="fas fa-bars" ></i>
         </a>
         </div>
@@ -9,7 +9,7 @@
             <div class="vertical-bar"></div>
         </div>
         <div class="col-auto">
-        <a href="index.html" style="text-decoration: none;">
+        <a href="index.html" class="primary" style="text-decoration: none;">
             DINE Lab, RMIT University
         </a>
         </div>
